<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRuns5</string>

    <!-- Change this to whatever the course website will be -->
    <string name="homepage_url">http://www.cs.dartmouth.edu/~campbell/cs65/cs65.html</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="dialog_fragment_tag_photo_picker">photo_picker_dialog_fragment</string>
    <string name="dialog_fragment_tag_general">general_dialog_fragment</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="preference_name">myruns_shared_preference</string>
    <string name="ui_profile_toast_save_text">Profile saved</string>
    <string name="ui_profile_toast_cancel_text">Change canceled</string>
    <string name="ui_profile_name_hint">Your name here</string>
    <string name="ui_profile_name_title">Name</string>
    <string name="ui_profile_email_hint">Your Email here</string>
    <string name="ui_profile_email_title">Email:</string>
    <string name="ui_profile_phone_hint">Your phone number here</string>
    <string name="ui_profile_phone_title">Phone:</string>
    <string name="ui_profile_gender_title">Gender:</string>
    <string name="ui_profile_gender_male">Male</string>
    <string name="ui_profile_gender_female">Female</string>
    <string name="ui_profile_major_title">Major:</string>
    <string name="ui_profile_major_hint">Your major here</string>
    <string name="ui_profile_class_title">Class:</string>
    <string name="ui_profile_class_hint">e.g. 2012</string>
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_cancel_title">Cancel</string>
    <string name="ui_button_change_title">Change</string>
    <string name="ui_button_ok_title">OK</string>
    <string name="ui_button_start_title">Start</string>
    <string name="ui_start_input_type_spinner_title">Input Type:</string>
    <string name="ui_start_activity_type_spinner_title"> Activity Type:</string>
    <string name="ui_settings_category_account_title">Account Preferences</string>
    <string name="ui_settings_category_additional_title">Additional settings</string>
    <string name="ui_settings_category_misc_title">Misc.</string>
    <string name="ui_settings_profile_title">User Profile</string>
    <string name="ui_settings_profile_summary">Names, Email, Class, etc</string>
    <string name="preference_key_privacy_key">ui_settings_privacy</string>
    <string name="ui_settings_privacy_summary">Posting your records anonymously</string>
    <string name="ui_settings_privacy_title">Privacy setting</string>
    <string name="preference_key_unit_display">ui_settings_unit_display</string>
    <string name="ui_settings_unit_display_summary">Select the units in which you would like to see distance values</string>
    <string name="ui_settings_unit_display_title">Unit Preference</string>
    <string name="ui_settings_comment_title">Comment</string>
    <string name="ui_settings_comment_summary">Any suggestion to this course?</string>
    <string name="ui_settings_comment_name">Leave your comment</string>
    <string name="ui_settings_homepage_title">Class homepage</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_profile_photo_content_description">Your profile photo:</string>
    <string name="ui_history_todo">This is the history tab. TODO in the next lab</string>
    <string name="ui_start_todo">This is the start tab. TODO in the next lab</string>
    <string name="ui_main_tab_start_title">Start</string>
    <string name="ui_main_tab_history_title">History</string>
    <string name="ui_main_tab_settings_title">Settings</string>
    <string name="ui_profile_photo_picker_title">Select profile image</string>
    <string name="ui_manual_input_duration_title">Duration (minitues):</string>
    <string name="ui_manual_input_distance_in_miles_title">Distance (Miles):</string>
    <string name="ui_manual_input_distance_in_km_title">Distance (Kilometers):</string>
    <string name="ui_manual_input_calories_title">Calories:</string>
    <string name="ui_manual_input_heartrate_title">Average Heart Rate (BPM):</string>
    <string name="ui_manual_input_comment_hint">How did it go? Enter Notes here.</string>
    <string name="ui_manual_input_comment_title">Comment:</string>
    <string name="ui_maps_display_notification_ticker"> MyRuns is recording your path.</string>
    <string name="ui_maps_display_notification_title"> MyRuns</string>
    <string name="ui_maps_display_notification_content">Recording your path now</string>
    <string name="ui_display_entry_activity_type_title">Activity type</string>
    <string name="ui_display_entry_date_time_title">Date and time</string>
    <string name="ui_display_entry_duration_title">Duration</string>
    <string name="ui_display_entry_distance_title">Distance</string>

    <string-array name="ui_start_input_type_spinner_entries">
        <item>Running</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string-array name="unit_display_name">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>
    <string-array name="unit_display_value">
        <item>@string/kilometers</item>
        <item>@string/miles</item>
    </string-array>

    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="feet">Feet</string>
    <string name="mile_per_hr">m/h</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </string-array>
    <string-array name="ui_manual_input_items">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heartrate</item>
        <item>Comment</item>
    </string-array>
    <string-array name="input_type_items">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_type_items">
        <item>Running</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
        <item>Standing</item>
    </string-array>

</resources>
